# Nightjar

./: .dockerignore  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README-zh.md  README.md  SECURITY.md  TELEMETRY.md  action.yml  contractd.toml  mcp-config-example.json  nightjar.toml  pyproject.toml  smithery.yaml
.bridgespace/swarms/pane1774/: w3-agent6-results.html
.card/: audit.card.md  auto.card.md  cache.card.md  cli.card.md  compiler.card.md  confidence.card.md  config.card.md  dafny-setup.card.md  display.card.md  explain.card.md  generator.card.md  immune-collector.card.md  immune-daikon.card.md  immune-enforcer.card.md  immune-enricher.card.md  immune-error-capture.card.md  immune-fingerprint.card.md  immune-network.card.md  immune-otel.card.md  immune-pipeline.card.md  immune-spec-updater.card.md  immune-store.card.md  immune-verifier.card.md  impact.card.md  intent-router.card.md  lock.card.md  mcp-server.card.md  optimizer.card.md  parser.card.md  replay.card.md  resolver.card.md  retry.card.md  safety-gate.card.md  shadow-ci.card.md  ship.card.md  spec-rewriter.card.md  stage-deps.card.md  tracking.card.md  tui.card.md  types.card.md  (+5 more)
.card/examples/: auth.card.md  payment.card.md  rate-limiter.card.md
.claude/: settings.local.json.bsbackup-pane1774
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/nightjar-action/: action.yml  shadow_ci.py
.github/workflows/: docker-publish.yml  nightjar-badge.yml  nightjar-example.yml  verify.yml
demo/: README.md  aha-moment.tape  generate-demos.py  nightjar-demo.html  nightjar-demo.tape  nightjar-pass-demo.html  nightjar-tui.tape  payment.card.md  payment.py  run_demo.py  run_demo.sh  tutorial-payment.card.md  tutorial-payment.py
deprecated-nightjarzzz/: README.md  pyproject.toml
deprecated-nightjarzzz/src/nightjarzzz/: __init__.py
docs/: ARCHITECTURE.md  POSITIONING.md  REFERENCES.md  agent-security-verification.md  bugs.md  cli-reference.md  configuration.md  dafny-setup.md  faq.md  immune-system.md  llms.txt  mcp-listing.md  spec-format.md
docs/content/: hn-objection-responses.md  product-hunt-listing.md  stackoverflow-answers.md  thesis-blog-post.md
docs/content/ci-examples/: README.md  cli-tool.yml  django-app.yml  fastapi-app.yml  flask-app.yml  library.yml
docs/content/community-specs/: flask-login.card.md  httpx.card.md  passlib.card.md  pydantic-validators.card.md  python-jose.card.md
docs/distribution/: awesome-list-submissions.md  blog-post-draft.md  cloudflare-deployment.md  competitor-responses.md  disclosure-templates.md  risk-monitoring.md  show-hn-draft.md
docs/tutorials/: ci-one-commit.md  quickstart-5min.md  verify-fastapi.md
npm/: package.json
research/: agent-framework-results.md  bug-verification.md  deerflow-results.md  dogfood-v2-results.md  mirofish-results.md  newer-bugs-verification.md  openswe-results.md  repro-scripts.py  repro_langgraph_silent_routing.py  self-scan-results.md  tier2-results.md  tier45-results.md  wave4-hunt-a2-results.md  wave4-hunt-a3a-results.md  wave4-hunt-a6-results.md  wave4-hunt-b1-results.md  wave4-hunt-b6-results.md  wave4_hunt_a1_tests_v2.py  willison-trending-results.md
scan-lab/: hermes-results.md  karpathy-results.md  tier1-results.md  wave4-hunt-a1-results.md  wave4-hunt-a3a-tests.py  wave4-hunt-a3b-hypothesis-tests.py  wave4-hunt-a3b-results.md  wave4-hunt-a4-results.md  wave4-hunt-a5-results.md  wave4-hunt-b2-results.md  wave4-hunt-b3-results.md  wave4-hunt-b4-results.md  wave4-hunt-b5-results.md  wave4_a1_hypothesis_tests.py  wave4_hunt_a1_tests.py  wave4_hunt_a4_tests.py
skills/: nightjar-agent-security.md  nightjar-spec.md  nightjar-verify.md
src/contractd/: __init__.py  audit.py  cli.py  config.py  dafny_setup.py  display.py  explain.py  generator.py  hill_climb.py  lock.py  mcp_server.py  optimizer.py  parser.py  replay.py  retry.py  ship.py  tracking.py  types.py  verifier.py
src/immune/: __init__.py  abstraction.py  collector.py  daikon.py  debate.py  enforcer.py  enricher.py  error_capture.py  fingerprint.py  herd.py  houdini.py  mines.py  otel_collector.py  pattern_library.py  pipeline.py  privacy.py  quality_scorer.py  spec_updater.py  store.py  types.py  verifier_pbt.py  verifier_symbolic.py  web_templates.py
src/nightjar/: __init__.py  __main__.py  audit.py  auto.py  badge.py  benchmark_adapter.py  benchmark_runner.py  cache.py  cli.py  compiler.py  compliance.py  confidence.py  config.py  contract_library.py  dafny_pro.py  diagnosis.py  display.py  explain.py  generator.py  gitnexus_hooks.py  hill_climb.py  hook_installer.py  immune_commands.py  impact.py  inferrer.py  intent_router.py  lock.py  mcp_server.py  negation_proof.py  optimizer.py  oracle_lifter.py  parser.py  pkg_auditor.py  pytest_plugin.py  replay.py  resolver.py  retry.py  safety_gate.py  sarif_writer.py  scanner.py  (+17 more)
src/nightjar/stages/: pbt.py  (+5 more)
tests/e2e/: conftest.py  test_badge_server.py  test_github_action.py
tests/fixtures/: constitution.card.md  invalid.card.md  minimal.card.md  missing_fields.card.md  payment.card.md
tests/integration/: test_end_to_end.py  test_generation_live.py
tests/unit/: test_abstraction.py  test_audit.py  test_auto.py  test_badge.py  test_benchmark_adapter.py  test_benchmark_runner.py  test_bfs_retry.py  test_cache.py  test_cegis_retry.py  test_cli.py  test_cli_help.py  test_cli_new_commands.py  test_cli_scan.py  test_cli_spec.py  test_cli_wave3.py  test_collector.py  test_compiler.py  test_complexity_routing.py  test_compliance.py  test_confidence.py  test_config.py  test_constitution.py  test_contract_library.py  test_dafny_errors.py  test_dafny_pro.py  test_dafny_setup.py  test_daikon.py  test_daikon_evolution.py  test_debate.py  test_degradation_ladder.py  test_display.py  test_display_streaming.py  test_enforcer.py  test_enricher.py  test_error_capture.py  test_explain.py  test_explain_llm.py  test_generator.py  test_gitnexus_hooks.py  test_herd.py  (+52 more)
(+149 files in other folders)
