[project]
name = "nightjar"
version = "0.1.0"
description = "Nightjar — formal verification CLI for AI-generated code"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "litellm>=1.0",
    "pydantic>=2.0",
    "hypothesis>=6.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "textual>=0.47.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "playwright>=1.40",
]
fast = [
    "watchfiles>=0.21",  # Rust-backed watcher — 10x faster than watchdog for nightjar watch
]
compliance = [
    "cyclonedx-bom>=4.0",  # CycloneDX SBOM generation for EU CRA compliance reports
]

[project.scripts]
nightjar = "nightjar.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: tests requiring external services (LLM API, Dafny binary)",
]
