[project]
name = "nightjarzzz"
version = "0.1.0"
description = "Nightjar — formal verification CLI for AI-generated code"
readme = "README.md"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.11"
authors = [
    { name = "Nightjar Contributors", email = "hello@nightjar.dev" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0",
    "litellm>=1.0",
    "pydantic>=2.0",
    "hypothesis>=6.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "textual>=0.47.0",
]

[project.urls]
Homepage = "https://nightjar.dev"
Repository = "https://github.com/nightjar-dev/nightjar"
Issues = "https://github.com/nightjar-dev/nightjar/issues"
Changelog = "https://github.com/nightjar-dev/nightjar/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "playwright>=1.40",
]
fast = [
    "watchfiles>=0.21",  # Rust-backed watcher — 10x faster than watchdog for nightjar watch
]
canvas = [
    "fastapi>=0.100",    # Verification Canvas REST + SSE API
    "uvicorn>=0.23",     # ASGI server for nightjar serve
]
compliance = [
    "cyclonedx-bom>=4.0",  # CycloneDX SBOM generation for EU CRA compliance reports
]

[project.scripts]
nightjar = "nightjar.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: tests requiring external services (LLM API, Dafny binary)",
]
