[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nightjarzzz"
version = "0.1.1"
description = "DEPRECATED — this package has been renamed to nightjar-verify. Please update your dependencies."
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
dependencies = ["nightjar-verify>=0.1.0"]
classifiers = [
    "Development Status :: 7 - Inactive",
]

[project.urls]
Homepage = "https://nightjarcode.dev"
Repository = "https://github.com/j4ngzzz/Nightjar"
